@@ -53,6 +53,7 @@ import org.apache.hadoop.hdfs.protocol.DataTransferProtocol.BlockConstructionSta
 import org.apache.hadoop.hdfs.protocol.FSConstants.DatanodeReportType;
 import org.apache.hadoop.hdfs.security.token.block.BlockTokenSecretManager;
 import org.apache.hadoop.hdfs.server.common.HdfsConstants;
+import org.apache.hadoop.hdfs.server.datanode.TestDatanodeUtils;
 import org.apache.hadoop.hdfs.HdfsConfiguration;
 import org.apache.hadoop.io.IOUtils;
 import org.apache.hadoop.io.Text;
@@ -195,7 +196,8 @@ public class TestDataTransferProtocol extends TestCase {
     try {
       cluster.waitActive();
       String poolId = cluster.getNamesystem().getBlockpoolId(); 
-      datanode = cluster.getDataNodes().get(0).getDNRegistrationForBP(poolId);
+      datanode = TestDatanodeUtils.getDNRegistrationForBP(
+          cluster.getDataNodes().get(0), poolId);
       dnAddr = NetUtils.createSocketAddr(datanode.getName());
       FileSystem fileSys = cluster.getFileSystem();
 
