@@ -97,6 +97,9 @@ Trunk (unreleased changes)
     HDFS-1652. Add support for multiple namenodes in MiniDFSCluster.
     (suresh)
 
+    HDFS-1672. HDFS Federation: refactor stopDatanode(name) to work 
+    with multiple Block Pools (boryas)
+
   IMPROVEMENTS
 
     HDFS-1510. Added test-patch.properties required by test-patch.sh (nigel)
